# distributed_graph_learning_simulator

./: README.md  experiment_analyzer.py  experiment_analyzer.sh  fed_aas.sh  fed_ags.sh  pyproject.toml  requirements.txt  simulator.py  test.sh
analysis/: document.py  session.py
conf/fed_ags/: PubMed.yaml  common.yaml  cs.yaml  ogbn-products.yaml  reddit.yaml  yelp.yaml
conf/fed_ais/: common.yaml
conf/fed_cluster_gcn/: common.yaml
experiment_script/: fed_aas_main.sh  fed_aas_periodic.sh  fed_ais_all.sh  fed_ais_main.sh  fed_ais_non_iid.sh  fed_ais_periodic.sh  fed_ais_periodic1.sh  fed_ais_random.sh  fed_ais_sensitivity1.sh  fed_ais_sensitivity2.sh  fed_ais_sensitivity3.sh  fed_ais_sensitivity4.sh  fed_ais_sensitivity5.sh  fed_all.sh  fed_all_non_iid.sh  fed_gcn_cluster.sh  fed_gcn_cluster_non_iid.sh  fed_local.sh  fed_sage_plus.sh  graphfed_main.sh  graphfed_non_iid.sh
method/: __init__.py
method/fed_aas/: __init__.py  server.py  worker.py
method/fed_ags/: __init__.py  algorithm.py  server.py  worker.py
method/fed_ais/: __init__.py  worker.py
method/fed_cluster_gcn/: __init__.py  algorithm.py
method/fed_gcn/: __init__.py
method/fed_gnn/: __init__.py  worker.py
method/fed_sage_plus/: __init__.py  evaluator.py  model.py
method/graphfed/: __init__.py  algorithm.py  server.py
visualization/: graph_visualizer.py  subgraph_visualizer.py
