[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed_graph_learning_simulator"
version = "1.0"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "distributed_learning_simulation@git+https://github.com/cyyever/distributed_learning_simulation_lib.git",
  "cyy_torch_graph@git+https://github.com/cyyever/torch_graph.git@main"
]



[tool.setuptools.package-dir]
"distributed_graph_learning_simulator.method"= "./method"

[project.urls]
Repository = "https://github.com/cyyever/distributed_graph_learning_simulator"

[tool.pyright]
include = ["method"]
[tool.ruff]
target-version = "py312"
src = ["method"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = ["F401","E501","F403"]
